Fixed some bugs

--- a/Backend/template.env
+++ b/Backend/template.env
@@ -7,7 +7,7 @@ DB_HOST="iniciativaser-db_test-1"
 DB_PORT=3306
 DB_DRIVER="mariadb"
 
-
+JWT_SECRET="aKASUFN2k123h1ad@dmkle.;kn123FGB"
 
 # configuración cors
 ORIGIN="http://localhost:3000"
