--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
