--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
+    "selenium-webdriver": "^4.19.0",
     "sequelize": "^6.18.0"
   },
   "devDependencies": {
