--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,16 +15,17 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.17.3",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.0",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
+    "selenium-webdriver": "^4.19.0",
     "sequelize": "^6.18.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
+    "nodemon": "^3.1.0",
     "sequelize-cli": "^6.4.1"
   }
 }
