--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Wait for services to be ready
         run: |
           # Esperar a que la base de datos esté lista
-          until docker-compose exec -T db_test mariadb --host=test --user=manager_test --password=RqoKdtp88Z94v7vL#XKVHPxWdb9dw -e "SELECT 1"; do
+          until docker-compose exec -T db_test mariadb --host=test --user=manager_test --password=pf$6#iAEQ#@y7vMnXiTXLLC#wiEHcn -e "SELECT 1"; do
             sleep 1
           done
           # Esperar a que el backend esté listo
